# parallax-samples

./: CMakeLists.txt  README.md
basic/: 01_hello_parallax.cpp  02_for_each_simple.cpp  03_transform_simple.cpp  auto_lambda_bench.cpp  compiler_test.cpp  comprehensive_bench.cpp  execution_policy_test.cpp  gpu_kernel_test.cpp  vector_multiply.cpp
